# logpilot-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COPILOT_INSTRUCTIONS.md  README.md  RELEASE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  release.yml  test.yml
logpilot/: __init__.py  chunker.py  cli.py  input_manager.py  llm_client.py  log_parser.py  postprocessor.py  prompt_engine.py  utils.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_input_manager.py  test_llm_client.py  test_log_parser.py  test_postprocessor.py  test_prompt_engine.py  test_utils.py
