[project]
name = "logpilot"
version = "0.1.0"
[tool.black]
line-length = 88
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.ruff]
line-length = 88
indent-width = 1
exclude = [".git", "__pycache__", ".venv", "venv", "env", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S"]
ignore = []

[tool.ruff.format]
indent-style = "tab"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests that run in isolation",
    "integration: Integration tests that test the full CLI",
    "slow: Tests that take a long time to run",
]

[tool.coverage.run]
source = ["logpilot"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
