[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logpilot"
version = "0.1.0"
description = "A CLI tool for AI-powered log analysis using the GitHub Copilot SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "logpilot contributors" },
]
keywords = ["cli", "logs", "log-analysis", "ai", "copilot", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.0.0",
    "orjson>=3.0.0",
    "tiktoken>=0.5.0",
    "toml>=0.10.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
    "pytest-mock",
    "pytest-cov",
]

[project.scripts]
logpilot = "logpilot.cli:app"

[project.urls]
Homepage = "https://github.com/colinmakerofthings/logpilot-cli"
Repository = "https://github.com/colinmakerofthings/logpilot-cli"
Issues = "https://github.com/colinmakerofthings/logpilot-cli/issues"
Changelog = "https://github.com/colinmakerofthings/logpilot-cli/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["logpilot"]

[tool.black]
line-length = 88
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.ruff]
line-length = 88
indent-width = 1
exclude = [".git", "__pycache__", ".venv", "venv", "env", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S"]
ignore = ["W191"]  # Allow tabs (used by formatter)

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S603"]  # Allow assert and subprocess in tests

[tool.ruff.format]
indent-style = "tab"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests that run in isolation",
    "integration: Integration tests that test the full CLI",
    "slow: Tests that take a long time to run",
]

[tool.coverage.run]
source = ["logpilot"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
